What: Use local `protop` executable for functional tests by default. Why: So functional tests can be run in CI.